# cpp-starter-project

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml
cmake/: compilerSettings.cmake  compilerWarnings.cmake  conanConfig.cmake  settings.cmake
src/: CMakeLists.txt  main.cc
tools/: build
